<resources>
    <string name="app_name">Mooo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_reset__password">Reset_Password</string>
    <string name="title_activity_template_pages">template_pages</string>
    <string name="date">Date: </string>
    <string name="drug_for_admin">Drug for Admin: </string>
    <string-array name="drugs">
        <item>Acepromazine</item>
        <item>Alprazolam</item>
        <item>Benazepril</item>
        <item>Carprofen</item>
        <item>Deracoxib</item>
        <item>Fenbendazole</item>
        <item>Juraclox 600</item>
    </string-array>

    <string name="drug_amount">Amount: </string>
    <string-array name="amounts">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
    </string-array>

    <string name="drug_period">Drug Period: </string>
    <string-array name="periods">
        <item>5 Days</item>
        <item>10 Days</item>
        <item>15 Days</item>
        <item>20 Days</item>
        <item>25 Days</item>
        <item>30 Days</item>
        <item>35 Days</item>
    </string-array>


    <string name="title_activity_main_puchase">main_puchase</string>
    <string name="title_activity_purchase_drug">purchaseDrugActivity</string>

    <!-- Purchase drug activity-->
    <string name="purchase_drug_name">Drug name</string>
    <string name="purchase_drug_expiryDate">Expiry Date</string>
    <string name="purchase_drug_purchasePlace">Purchase place</string>
    <string name="purchase_drug_receivedDate">Received Date</string>
    <string name="purchase_drug_batch">Batch</string>
    <string name="purchase_drug_WitholdingMilk">Witholding milk</string>
    <string name="purchase_drug_WitholdingSlaughter">Witholding Slaughter</string>
    <string name="title_activity_cow__history_">Cow_History_Activity</string>
    <string name="title_activity_show_pdf">ShowPDF</string>


</resources>
