<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jason.mooo.template_pages"
    android:background="#ff7f22">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/frameLayout6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="UserName"
            android:id="@+id/text_username"
            android:layout_gravity="left|center_vertical"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:id="@+id/button_profile"
            android:layout_gravity="right|center_vertical" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/frameLayout7">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LiveStock"
            android:id="@+id/button_purchaseMedicine_bottom_livestock"
            android:layout_gravity="left|center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Home"
            android:id="@+id/button_purchaseMedicine_bottom_home"
            android:layout_gravity="center"
            android:maxLines="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medicine"
            android:id="@+id/button_purchaseMedicine_bottom_chemical"
            android:layout_gravity="right|center_vertical" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/frameLayout6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/frameLayout7"
        android:id="@+id/num3">


        <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="70dp"-->
        <!--android:text="Scan For ID"-->
        <!--android:id="@+id/button_scan_for_id"-->
        <!--android:layout_gravity="center_horizontal|bottom"-->
        <!--android:layout_marginTop="20dp" />-->

        <EditText
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:id="@+id/purchasePlace"
            android:layout_gravity="left|center_vertical"
            android:hint="@string/purchase_drug_purchasePlace"
            android:maxLines="1"
            android:inputType="text"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="30dp"
            android:singleLine="true" />

        <EditText
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:id="@+id/Batch"
            android:layout_gravity="left|center_vertical"
            android:layout_marginTop="40dp"
            android:hint="@string/purchase_drug_batch"
            android:singleLine="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase_drug_receivedDate"
            android:id="@+id/receivedDate"
            android:layout_gravity="left|center_vertical"
            android:layout_marginTop="140dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/purchase_drug_expiryDate"
            android:id="@+id/expDate"
            android:layout_gravity="left|center_vertical"
            android:layout_marginBottom="80dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_add_Medicine"
            android:layout_gravity="left|center_vertical"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            android:dropDownWidth="200dp"
            android:layout_marginBottom="140dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:text="Purchase Medicine"
            android:id="@+id/textView2"
            android:layout_gravity="left|center_vertical"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:textSize="30dp"
            android:layout_marginBottom="185dp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="Purchase Medicine"
            android:id="@+id/addMedicine"

            android:layout_gravity="center"
            android:layout_marginTop="190dp"
            android:shadowColor="#ffa12f" />

        <EditText
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/AmountID"
            android:layout_gravity="left|center_vertical"
            android:layout_marginTop="90dp"
            android:hint="Amount (mL)" />


    </FrameLayout>

</RelativeLayout>
